Create card view and components

--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -42,6 +42,26 @@
                                 <span class="title">داشبورد</span>
                             </a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
+                                <span class="icon-holder">
+                                    <i uk-icon="settings"></i>
+                                </span>
+                                <span class="title">مدیریت</span>
+                                <span class="arrow" uk-icon="chevron-forward">
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a href="/Admin/Card" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="card"></i>
+                                        </span>
+                                        <span class="title">کارت بانکی</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="nav-item active">
                             <a href="/Admin/Catagory" class="LoadingDiv">
                                 <span class="icon-holder">
@@ -129,9 +149,9 @@
                         <li class="nav-item active">
                             <a href="/Admin/Delivery" class="LoadingDiv">
                                 <span class="icon-holder">
-                                    <i uk-icon="cog"></i>
+                                    <i uk-icon="grid"></i>
                                 </span>
-                                <span class="title">ارائه</span>
+                                <span class="title">ارائه خدمات</span>
                             </a>
                         </li>
                         <li class="nav-item active">
@@ -148,6 +168,14 @@
                                     <i uk-icon="pricetags-outline"></i>
                                 </span>
                                 <span class="title">تخفیفات</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Ticket" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="headset-outline"></i>
+                                </span>
+                                <span class="title">مرکز پاسخگویی</span>
                             </a>
                         </li>
                     </ul>
