--- a/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
@@ -3,7 +3,7 @@
     <h4>
         نظر شما
     </h4>
-    <form id="ajaxresultSendComment" class="fg-col uk-margin-small-top" asp-action="SendComment" method="post" asp-area=""
+    <form id="ajaxresultSendComment" class="fg-col uk-margin-small-top" action="/Product/SendComment" method="post"
           data-ajax="true"
           data-ajax-method="POST"
           data-ajax-mode="replace"
