--- a/GhasreMobile/Areas/Admin/Views/Card/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Card/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblBankAccounts>
 @{
     ViewData["Title"] = "کارت بانکی";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -12,7 +12,7 @@
                 <div class="pr-1 pt-2">
                     <div class="card-form form-row">
                         <div class="form-group pb-0 mb-0">
-                            <button id="addOff" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
+                            <button id="AddCard" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
                         </div>
                     </div>
                 </div>
@@ -29,26 +29,35 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>123446789956562</td>
-                                <td>علی علیزاده</td>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.AccountNo</td>
+                                    <td>@item.Name</td>
 
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="فعال">
-                                        <a><span class="text-success" uk-icon="toggle"></span></a>
-                                    </span>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="غیر فعال">
-                                        <a><span class="text-secondary gly-rotate-180" uk-icon="toggle"></span></a>
-                                    </span>                                   
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                        <a onclick="Edit()" id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
-                                    </span>
-                                </td>
+                                    <td>
+                                        @if (item.IsActive)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="فعال">
+                                                <a onclick="ChangeStatus(@item.BankAccountId)"><span class="text-success" uk-icon="toggle"></span></a>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="غیر فعال">
+                                                <a onclick="ChangeStatus(@item.BankAccountId)"><span class="text-secondary gly-rotate-180" uk-icon="toggle"></span></a>
+                                            </span>
+                                        }
 
-                            </tr>
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                            <a onclick="Edit(@item.BankAccountId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
+                                    </td>
 
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -67,12 +76,10 @@
 @section Script{
 
     <script>
-        $("#addOff").click(function () {
-
+        $("#AddCard").click(function () {
             $.get("/Admin/Card/Create", function (result) {
                 $(".modal-content").html(result);
             });
-
         });
 
         function Edit(Id) {
@@ -81,6 +88,13 @@
                 $(".modal-content").html(result);
             });
         }
+
+        function ChangeStatus(id) {
+            $.post("/Admin/Card/ChangeStatus/" + id, function () {
+                window.location.reload();
+            });
+        }
+
     </script>
 
 }
