--- a/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
@@ -1,10 +1,11 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblTicket>
 @{
     ViewData["Title"] = "مرکز پاسخگویی";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-@*<h1>Index</h1>*@
+@using GhasreMobile.Utilities
+
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
@@ -42,32 +43,50 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>23</td>
-                                <td>عنوان 1</td>
-                                <td>امیر جدیدی</td>
-                                <td>تاریخ..</td>
-                                <td>
-                                    <span class="text-success">پاسخ داده شده</span>
-                                    <span class="text-warning">پاسخ داده نشده</span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="محتویات تیکت">
-                                        <a href="/Admin/Ticket/InnerTicket" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="6">تیکتی وجود ندارد</td>
+                                </tr>
+                            }
+                            @foreach (var items in Model.OrderByDescending(c => c.IsAnswer != true).GroupBy(c => c.ClientId))
+                            {
+                                foreach (var item in items.TakeLast(1))
+                                {
+                                    <tr>
+                                        <td>#@item.TicketId</td>
+                                        <td>@item.Title</td>
+                                        <td>@item.Client.Name</td>
+                                        <td>@item.DateSubmited.Value.AllToShamsi()</td>
+                                        <td>
+                                            @if (item.IsAnswerd)
+                                            {
+                                                <span class="text-success">پاسخ داده شده</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="text-warning">پاسخ داده نشده</span>
+                                            }
+                                        </td>
+                                        <td>
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="محتویات تیکت">
+                                                <a href="/Admin/Ticket/InnerTicket/@item.ClientId" class="text-primary" uk-icon="information-circle-outline"></a>
+                                            </span>
+                                        </td>
+                                    </tr>
+                                }
+                            }
                         </tbody>
                     </table>
                 </div>
             </div>
 
             <!--end list region-->
-            @*<div class="card-footer bg-white">
-                    <nav aria-label="Page navigation example">
-                        @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
-                    </nav>
-                </div>*@
+            <div class="card-footer bg-white">
+                <nav aria-label="Page navigation example">
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
+                </nav>
+            </div>
         </div>
     </div>
 </div>
