--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -112,6 +112,14 @@
                                         <span class="title">برند</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Discount" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="pricetags-outline"></i>
+                                        </span>
+                                        <span class="title">تخفیفات</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item active">
@@ -130,14 +138,45 @@
                                 <span class="title">نظرات</span>
                             </a>
                         </li>
-                        <li class="nav-item active">
-                            <a href="/Admin/Slider" class="LoadingDiv">
+                        
+
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="images"></i>
+                                    <i uk-icon="folder-open"></i>                                    
                                 </span>
-                                <span class="title">اسلایدر</span>
+                                <span class="title">مدیا</span>
+                                <span class="arrow" uk-icon="chevron-forward">
+                                </span>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a href="/Admin/Slider" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="images"></i>
+                                        </span>
+                                        <span class="title">اسلایدر</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Album" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="image"></i>
+                                        </span>
+                                        <span class="title">آلبوم</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Ad" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="megaphone"></i>                                
+                                        </span>
+                                        <span class="title">تبلیغات</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
+
                         <li class="nav-item active">
                             <a href="/Admin/Blog" class="LoadingDiv">
                                 <span class="icon-holder">
@@ -162,14 +201,7 @@
                                 <span class="title">فروشگاه</span>
                             </a>
                         </li>
-                        <li class="nav-item active">
-                            <a href="/Admin/Discount" class="LoadingDiv">
-                                <span class="icon-holder">
-                                    <i uk-icon="pricetags-outline"></i>
-                                </span>
-                                <span class="title">تخفیفات</span>
-                            </a>
-                        </li>
+                        
                         <li class="nav-item active">
                             <a href="/Admin/Ticket" class="LoadingDiv">
                                 <span class="icon-holder">
