--- a/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
@@ -9,43 +9,43 @@
 </div>
 <div class="modal-body table-responsive">
     <div class="flex row col-12 my-3">
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
             </a>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-6 col-lg-3 col-md-4 mb-3">
             <button class="bg-light dismissButton" uk-icon="close-outline"></button>
             <a class="d-inline" href="~/Images/Slider/33806eed-1d35-42f5-a02a-d296b76688e8.jpg" target="_blank">
                 <img class="d-inline" src="https://picsum.photos/250/250" width="250" height="250" alt="">
