--- a/GhasreMobile/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Views/Blog/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TblBlog>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "مقاله ها";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -11,8 +11,8 @@
 }
 
 <nav class="breadcrumb uk-padding-remove gap-b">
-    <a href="">وبلاگ ها</a>
-    <a href="" class="active">تمام وبلاگ ها</a>
+    <a href="#">وبلاگ ها</a>
+    <a href="#" class="active">تمام وبلاگ ها</a>
 </nav>
 
 <div class="blogs-grid">
