--- a/GhasreMobile/Views/Shared/Components/SendCommentBlogView/SendCommentBlogView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SendCommentBlogView/SendCommentBlogView.cshtml
@@ -13,7 +13,7 @@
         <span class="text-danger" asp-validation-for="Body"></span>
         <input type="hidden" id="BlogId" asp-for="BlogId" name="BlogId" />
         <div class="rowr uk-margin-small-top">
-            @*<button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendCommentBlog')">ثبت نظر</button>*@
+            <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendCommentBlog')">ثبت نظر</button>
         </div>
     </form>
 </div>
