--- a/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblAd
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش تبلیغات
     </h6>
@@ -6,25 +7,26 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-action="Edit" asp-controller="Ad" asp-area="Admin" enctype="multipart/form-data">
+    <input type="hidden" asp-for="AdId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام</label>
-                <input class="form-control form-control-sm" placeholder="مثال: ...">
+                <input asp-for="Label" class="form-control form-control-sm" placeholder="مثال: ...">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>ویرایش لینک</label>
-                <input class="form-control form-control-sm" placeholder="...//:https">
+                <input asp-for="Link" class="form-control form-control-sm" placeholder="...//:https">
                 <span class="text-danger"></span>
             </div>
         </div>
         <label class="mt-2">ویرایش تصویر</label>
         <br />
         <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm" onchange="inputChanged(this)">
+            <input asp-for="Image" type="file" class="custom-file-input form-control form-control-sm" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
     </div>
