--- a/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblClient
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش کاربر
     </h6>
@@ -6,39 +7,52 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-action="Edit" asp-controller="Client" asp-area="Admin"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام کاربر</label>
-                <input type="text" class="form-control form-control-sm" placeholder="مثال: پیمان معادی">
+                <input asp-for="Name" type="text" class="form-control form-control-sm" placeholder="مثال: پیمان معادی">
             </div>
             <div class="form-group col-md-3">
                 <label>تعیین نقش</label>
-                <select class="form-control form-control-sm">
-                    <option value="">نقش1</option>
-                    <option value="">نقش2</option>
-                    <option value="">نقش3</option>
-                </select>
+                @{ 
+                    IEnumerable<DataLayer.Models.TblRole> roles = ViewBag.Roles;
+                }
+            <select class="form-control form-control-sm" asp-for="RoleId">
+                @foreach (var item in roles)
+                {
+                    if (item.RoleId == Model.RoleId)
+                    {
+                        <option selected value="@item.RoleId">@item.Name</option>
+                    }
+                    else
+                    {
+                        <option value="@item.RoleId">@item.Name</option>
+                    }
+                }
+            </select>
             </div>
         </div>
         <hr />
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
-                <input type="tel" class="form-control form-control-sm" placeholder="09145416" disabled>
+                <input asp-for="TellNo" type="tel" class="form-control form-control-sm" placeholder="09145416" disabled>
             </div>
             <div class="form-group col-md-3">
                 <label>کیف پول</label>
-                <input type="number" class="form-control form-control-sm" placeholder="840000" disabled>
+                <input asp-for="Balance" type="number" class="form-control form-control-sm" placeholder="840000" disabled>
             </div>
-            <div class="form-group col-md-3">
-                <label>رمز ورود</label>
-                <input type="password" class="form-control form-control-sm" placeholder="840000" disabled>
-            </div>
+
             <div class="form-group col-md-3">
                 <label>تاریخ ثبت نام</label>
-                <input type="date" class="form-control form-control-sm" placeholder="840000" disabled>
+                <input asp-for="DateCreated" type="date" class="form-control form-control-sm" placeholder="840000" disabled>
             </div>
         </div>
     </div>
@@ -46,3 +60,6 @@
         <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
     </div>
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
