--- a/GhasreMobile/Views/Gallery/Index.cshtml
+++ b/GhasreMobile/Views/Gallery/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TblAlbum>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "گالری";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
