--- a/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
@@ -15,14 +15,8 @@
         <ul class="uk-dotnav">
             @foreach (var item in Model)
             {
-                <li uk-slideshow-item="@(Model.ToList().IndexOf(item)+1)"><a href="#">Item 1</a></li>
-                <li>
-                    <a href="@item.Link"><img src="~/Images/Slider/@item.ImageUrl" alt="@item.Name" uk-cover></a>
-                </li>
+                <li uk-slideshow-item="@(Model.ToList().IndexOf(item)+1)"><a href="#">@item.Name</a></li>
             }
-
-            <li uk-slideshow-item="1"><a href="#">Item 2</a></li>
-            <li uk-slideshow-item="2"><a href="#">Item 3</a></li>
         </ul>
     </div>
 </div>
